[fix]mypage align

--- a/static/css/my_page.css
+++ b/static/css/my_page.css
@@ -321,11 +321,12 @@ body {
 
 
 .second_container {
+    border: solid 1px var(--border-color);
+    border-radius: 8px;
     display: flex;
-    width: 100%;
+    width: 33%;
     flex-direction: column;
     align-items: center;
-    margin: 0 10px;
 }
 
 .directory_box {
